Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13686

lctl pool_add returns error randomly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      lctl pool_add returns error code depending on order of OSTs, see example:

      [root@dhcppc3 lustre-wc-rel]# lctl pool_add lustre.qpool1 OST0000
      OST lustre-OST0000_UUID added to pool lustre.qpool1
      [root@dhcppc3 lustre-wc-rel]# lctl pool_add lustre.qpool1 OST[0-1]
      OST lustre-OST0000_UUID is already in pool lustre.qpool1
      OST lustre-OST0001_UUID added to pool lustre.qpool1
      [root@dhcppc3 lustre-wc-rel]# echo $?
      0
      [root@dhcppc3 lustre-wc-rel]# lctl pool_remove lustre.qpool1 OST[0-1]
      OST lustre-OST0000_UUID removed from pool lustre.qpool1
      OST lustre-OST0001_UUID removed from pool lustre.qpool1
      [root@dhcppc3 lustre-wc-rel]# lctl pool_add lustre.qpool1 OST0001
      OST lustre-OST0001_UUID added to pool lustre.qpool1
      [root@dhcppc3 lustre-wc-rel]# lctl pool_add lustre.qpool1 OST[0-1]
      OST lustre-OST0001_UUID is already in pool lustre.qpool1
      OST lustre-OST0000_UUID added to pool lustre.qpool1
      pool_add: File exists
      [root@dhcppc3 lustre-wc-rel]# echo $?
      17 

      The problem is caused by jt_pool_cmd, that returns the latest result ignoring previous errors.

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: